# SMG-Remake

./: .gitignore  CMakeLists.txt  TODO.md  imgui.ini
config/black_holes/: black_hole_01.yaml
config/camera/: camera_01.yaml  camera_02.yaml  camera_03.yaml
config/planets/: planet_01.yaml  planet_02.yaml
config/scenes/: scene_01.yaml  scene_02.yaml  scene_03.yaml
report/: main.tex
src/: environment.cpp  environment.hpp  main.cpp  scene.cpp  scene.hpp
src/camera/: attached_to_player_camera.cpp  attached_to_player_camera.hpp  camera.cc  camera.cpp  camera.hh  camera.hpp  camera_loader.cpp  camera_loader.hpp  camera_type.cpp  camera_type.hh  camera_type.hpp  fixed_camera.cpp  fixed_camera.hh  fixed_camera.hpp  floating_camera.cpp  floating_camera.hpp
src/deformable/: deformable.cpp  deformable.hpp
src/objects/: billboard.cpp  billboard.hpp  black_hole.cpp  black_hole.hpp  planet.cpp  planet.hpp
src/simulation/: simulation.cpp  simulation.hpp
src/skybox/: skybox.cpp  skybox.hpp
src/stages/: comet_stage.cpp  comet_stage.hpp  luma_stage.cpp  luma_stage.hpp  normal_stage.cpp  normal_stage.hpp  purple_coins_comet_stage.cpp  purple_coins_comet_stage.hpp  stage.cpp  stage.hpp  timer_comet_stage.cpp  timer_comet_stage.hpp
